Fix time placeholder showing on mobile format for condensed messages
As an extra, make sure time placeholder cannot be selected anymore, and do not do an extra call to `tz` helper when time is not relevant/displayed.

I tried to entirely remove `time`/`from` blocks, but because of flexbox layout, that broke message alignment...

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -837,6 +837,10 @@ kbd {
 	display: none;
 }
 
+#chat .condensed .time {
+	visibility: hidden;
+}
+
 #windows .header .topic,
 .messages .msg,
 .sidebar {
@@ -2043,6 +2047,11 @@ part/quit messages where we don't load previews (adds a blank line otherwise) */
 		padding: 0;
 	}
 
+	#chat .condensed .time,
+	#chat .condensed .from {
+		display: none;
+	}
+
 	#chat .date-marker,
 	#chat .unread-marker {
 		margin: 0;
@@ -2180,8 +2189,4 @@ part/quit messages where we don't load previews (adds a blank line otherwise) */
 #chat .action .text,
 #chat table.channel-list .topic {
 	white-space: pre-wrap;
-}
-
-.hide-text {
-	color: transparent !important;
 }
